Update to Final
Fixed long width on read.csv line

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -48,7 +48,8 @@ library(gridExtra)
 # Go to the directory where the activity.csv file has been unzipped and read the file in to a dataframe
 # coercing the string data in column 2 in to a date format.
 setwd("~/Dropbox/Learning/Coursera/Data Science/Reproducible Research/RepData_PeerAssessment1")
-activities <- read.csv(file="activity.csv", header=TRUE, na.strings="NA", colClasses=c("integer","Date","integer"))
+activities <- read.csv(file="activity.csv", header=TRUE, na.strings="NA", 
+                       colClasses=c("integer","Date","integer"))
 ```
 
 ## What is mean total number of steps taken per day?
